# zr

./: .gitignore  .zr.config.spec.yaml  .zr.config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PROMPT.md  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.57.0.md  RELEASE_NOTES_v1.58.0.md  RELEASE_NOTES_v1.60.0.md  RELEASE_NOTES_v1.7.0.md  TODO.md  build.zig  build.zig.zon  debug_lsp.sh  install.ps1  install.sh  test_lsp_simple.sh  zr.config.spec.yaml  zr.toml
.claude/: MIXIN_IMPLEMENTATION_CHECKLIST.md  MIXIN_TESTS_SUMMARY.md  session-memory-cycle67.md  session-memory.txt  session-summary-129.md  session-summary-133.md  session-summary-136.md  session-summary-138.md  session-summary-141.md  session-summary-143.md  session-summary-149.md  session-summary-cycle-134.md  session-summary-cycle-147.md  settings.json  test-requirements-mixins.md
backup/: build.zig  build.zig.zon
benchmarks/: README.md  RESULTS.md  benchmark.sh  run_benchmarks.sh
docs/: PLUGIN_DEV_GUIDE.md  PLUGIN_GUIDE.md  PRD.md  README.md  milestones.md  plugin-registry-api.md
examples/: README.md
examples/python-poetry/: README.md  pyproject.toml  zr.toml
examples/python-poetry/src/myapp/: __init__.py  calculator.py  cli.py
examples/python-poetry/tests/: test_calculator.py
examples/rust-cargo/: Cargo.toml  README.md  zr.toml
examples/rust-cargo/benches/: calculator_bench.rs
examples/rust-cargo/src/: calculator.rs  main.rs
repositories/: .zr.config.yaml
scripts/: test-coverage.sh
src/: .zr.config.yaml  command.zig  config.zig  main.zig  main.zig.bak  multirepo.zig  repository.zig  test_runner.zig  test_utils.zig
tests/: 20000_internal_tasks_test.zig  21000_settings_test.zig  22000_settings_jobs_test.zig  add_test.zig  (+141 more)
(+404 files in other folders)
